refactory : list 오류 수정 2차

--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -28,6 +28,7 @@
         </div>
     </form>
 
+    <a th:href="@{/list/add}" th:text="#{등록}"></a>
     <div class="divTable minimalistBlack">
         <div class="divTableHeading">
             <div class="divTableRow">
