--- a/src/main/webapp/WEB-INF/templates/front/list/update.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/update.html
@@ -5,8 +5,10 @@
 <main layout:fragment="content" >
     <h1>관측소 정보 등록</h1>
     <a th:href="@{/list}" th:text="#{목록으로}"></a>
-    <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off">
+    <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off" th:object="${requestObservatory}">
         <input type="hidden" name="mode" value="update">
+        <input type="hidden" name="obscd" th:field="*{obscd}">
+        <input type="hidden" name="type" th:field="*{type}">
         <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
         <th:block th:replace="~{front/list/_form::form}"></th:block>
     </form>
