--- a/src/main/webapp/WEB-INF/templates/front/list/delete.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/delete.html
@@ -1,1 +1,5 @@
-<h1>관측소 삭제</h1>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{front/layouts/main}">
+<main layout:fragment="content" >
