--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -64,7 +64,9 @@
                     <i class="fa fa-search" aria-hidden="true"></i>
                 </div>
                 <div class="divTableCell">
+                    <a th:href="@{/list/update/{obscd}/{type}(obscd=${item.obscd}, type=${item.type})}">
                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                    </a>
                 </div>
                 <div class="divTableCell">
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
