--- a/src/main/webapp/WEB-INF/templates/front/list/update.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/update.html
@@ -15,7 +15,7 @@
     </form>
 
     <div class="submit_btns">
-        <button type="submit" th:text="#{수정}"></button>
+        <button type="submit" th:text="#{등록}"></button>
     </div>
 </main>
 </html>
