--- a/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{front/layouts/popup}">
 <main layout:fragment="content">
-    <section th:object="requestObservation">
+    <section th:object="${requestObservation}">
         <h2 class="text-center" th:text="*{obsnm}"></h2>
         <div class="h-line"></div>
         <div class="divTable">
