feat: map 사이드 검색 추가

--- a/src/main/resources/static/front/css/map/map.css
+++ b/src/main/resources/static/front/css/map/map.css
@@ -85,3 +85,30 @@
     background: #5462A6;
     color: #fff;
 }
+
+.searchInp{
+    padding: 0 10px;
+    border: 2px solid var(--main-color);
+    width: 200px;
+    height: 25px;
+    margin: 0 10px;
+}
+
+.searchBtn{
+    text-align: center;
+    background: var(--main-color);
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border: 2px solid var(--main-color);
+}
+
+.targetNm{
+    font-weight: 700;
+}
+
+.order{
+    border: 2px solid var(--main-color);
+    border-radius: 3px;
+    padding: 3px 5px;
+}
