--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -68,8 +68,9 @@
                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                     </a>
                 </div>
-                <div class="divTableCell">
+                <div class="divTableCell delete" th:data-obscd="${item.obscd}">
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    <!--<input type="hidden" th:name="${'obsnm' + status.count}" th:value="${item.obsnm}" th:id="*{'obsnm' + status.count}">-->
                 </div>
                 <div class="divTableCell">
                     <button type="button" class="settingBtn" th:data-seq="${status.count}" data-url="/list/setting/">
@@ -89,6 +90,17 @@
             button.addEventListener("click", (e) => {
                 const obscd = e.currentTarget.dataset.obscd;
                 const url = `/list/detail/${obscd}`;
+                popup.open(url, 450, 450);
+            });
+        });
+    </script>
+    <script>
+        const { popup } = commonLib;
+        const delete = document.querySelectorAll(".delete);
+        details.forEach((button, index) => {
+            button.addEventListener("click", (e) => {
+                const obscd = e.currentTarget.dataset.obscd;
+                const url = `/list/delete/${obscd}`;
                 popup.open(url, 450, 450);
             });
         });
