--- a/src/main/webapp/WEB-INF/templates/front/list/update.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/update.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content" >
-    <h1>관측소 정보 등록</h1>
+    <h1>관측소 정보 수정</h1>
     <a th:href="@{/list}" th:text="#{목록으로}"></a>
 
     <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off" th:object="${requestObservatory}">
@@ -12,10 +12,11 @@
         <input type="hidden" name="type" th:field="*{type}">
         <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
         <th:block th:replace="~{front/list/_form::form}"></th:block>
+        <div class="submit_btns">
+            <button type="submit" th:text="#{수정}"></button>
+        </div>
     </form>
 
-    <div class="submit_btns">
-        <button type="submit" th:text="#{등록}"></button>
-    </div>
+
 </main>
 </html>
