--- a/src/main/webapp/WEB-INF/templates/front/list/info.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/info.html
@@ -26,6 +26,34 @@
                     <span th:text="*{type}"></span>
                 </div>
             </div>
+        </div>
+        <!-- 관측소 데이터 검색 -->
+        <div class="observationSearch mgn-bottom-10px">
+            <div class="flex alc searchTxt">
+                <i class="fa fa-search" aria-hidden="true"></i>
+                <div>검색</div>
+            </div>
+            <form th:object="${observationDataSearch}" class="flex align-center obsForm">
+                <input type="hidden" name="type" th:value="${requestObservatory.type}">
+                <input type="hidden" name="obscd" th:value="${requestObservatory.obscd}">
+<!--                <input type="hidden" name="timeUnit" th:value="${requestObservatory.timeUnit}">-->
+
+                <div class="grw-1">
+                    <span th:text="#{조회기간}"></span>
+                    <input type="date" name="sdate" th:field="*{sdate}">
+                    ~
+                    <input type="date" name="edate" th:field="*{edate}">
+                </div>
+                <button type="button" class="searchBtn" th:text="#{검색}"></button>
+
+
+            </form>
+
+
+        </div>
+
+
+
     [[${requestObservatory}]]
 
         <th:block th:replace="~{common/_pagination::pagination}"></th:block>
