--- a/src/main/webapp/WEB-INF/templates/front/list/observation_edit.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/observation_edit.html
@@ -13,6 +13,9 @@
     <form th:object="${requestObservation}" th:action="@{/list/setting/edit}" method="post" target="ifrmProcess" autocomplete="off">
         <input type="hidden" name="seq" th:value="*{seq}">
         <input type="hidden" name="obscd" th:value="*{obscd}">
+        <input type="hidden" name="obsnm" th:value="*{obsnm}">
+        <input type="hidden" name="type" th:value="*{type}">
+        <input type="hidden" name="ymdhm" th:value="*{ymdhm}">
         <div>
             <div th:text="#{관측소명}"></div>
             <div th:text="*{obsnm}"></div>
@@ -28,9 +31,9 @@
         <div>
             <div th:text="#{관측값}"></div>
             <div>
-                <input type="number" name="rf" th:if="*{type == 'rf'}" th:field="*{rf}">
-                <input type="number" name="wl" th:if="*{type == 'wl'}" th:field="*{wl}">
-                <input type="number" name="flw" th:if="*{type == 'flw'}" th:field="*{flw}">
+                <input type="text" class="inputNum" name="rf" th:if="*{type == 'rf'}" th:field="*{rf}">
+                <input type="text" class="inputNum" name="wl" th:if="*{type == 'wl'}" th:field="*{wl}">
+                <input type="text" class="inputNum" name="flw" th:if="*{type == 'flw'}" th:field="*{flw}">
             </div>
         </div>
         <button type="submit" class="saveBtn">
