feat: 지도 관측소 검색 기능 추가

--- a/src/main/resources/static/common/css/popup_style.css
+++ b/src/main/resources/static/common/css/popup_style.css
@@ -24,7 +24,10 @@ a { color:#222; text-decoration: none; }
     right: 10px;
     top: 10px;
 }
+.head{
+    height: 50px;
 
+}
 .popupHeader{
     text-align: center;
     padding-top: 40px;
