--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -147,7 +147,7 @@ h2{
 }
 
 /* 테이블 S */
-div.minimalistBlack {
+.minimalistBlack {
   border: 3px solid #000000;
   width: 100%;
   text-align: left;
