--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -2,9 +2,57 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{front/layouts/main}">
-<main layout:fragment="content">
+<main layout:fragment="content" >
     <h1>대시보드</h1>
-    차트 테스트
+    <form th:action="@{/dashboard}" method="get" th:object="${observatorySearch}">
+        <div class="flex align-center">
+            <div class="searchIcon"><div><i class="fa fa-search" aria-hidden="true"></i></div></div>
+            <div>검색</div>
+        </div>
+        <hr>
+        <div class="flex align-center">
+            <label for="obscd">관측소 코드 </label>
+            <input type="number" id="obscd" name="obscd" th:field="*{obscd}" placeholder="xxxxxxx">
+            <label for="obsnm">관측소명</label>
+            <input type="text" id="obsnm" name="obsnm" th:field="*{obsnm}" placeholder="관측소 명을 입력하세요">
+            <div class="searchBtn">
+                <button type="submit" class="btn">검색</button>
+            </div>
+        </div>
+    </form>
+
+    <div class="dashList">
+        <div class="divTable minimalistBlack">
+            <div class="divTableHeading">
+                <div class="divTableRow">
+                    <div th:text="#{연번}" class="divTableHead">head1</div>
+                    <div th:text="#{관측소 명}" class="divTableHead">head2</div>
+                    <div th:text="#{관측소 코드}" class="divTableHead">head4</div>
+                    <div th:text="#{강수량}" class="divTableHead">head4</div>
+                </div>
+            </div>
+            <div class="divTableBody"  th:if="${items != null && !items.isEmpty()}" th:each="item, status : ${items}" th:object="item">
+                [[${items}]]
+                <div class="divTableRow">
+                    <div th:text="${status.count}"  class="divTableCell">cell1_1</div>
+
+                    <div class="divTableCell detail" th:data-obscd="${item.obscd}">
+                        <span th:text="*{obsnm}"></span>
+                        <input type="hidden" th:name="${'obsnm' + status.count}" th:value="${item.obsnm}" th:id="*{'obsnm' + status.count}">
+                    </div>
+                    <div class="divTableCell">
+                        <span th:text="*{obscd}"></span>
+                    </div>
+                    <div class="divTableCell" th:data-obscd-id="*{'obscd_' + status.count}" th:data-obsknd-id="*{'obsknd' + status.count}">
+                        <span th:text="*{obscd}"></span>
+                    </div>
+                </div>
+                <th:block th:unless="*{items != null}" th:text="#{데이터_없음}"></th:block>
+            </div>
+        </div>
+        <th:block th:replace="~{common/_pagination::pagination}"></th:block>
+    </div>
+
     <div>
         <canvas id="myChart"></canvas>
     </div>
