--- a/src/main/webapp/WEB-INF/templates/front/list/write.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/write.html
@@ -4,18 +4,21 @@
       layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content" >
     <h1>관측소 정보 등록</h1>
+    <div class="save list">
+        <a th:href="@{/list}" th:text="#{목록으로}"></a>
+    </div>
+    <hr>
+    <div class="flex align-center">
+        <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off">
+            <input type="hidden" name="mode" value="write">
+            <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
 
-    <a th:href="@{/list}" th:text="#{목록으로}"></a>
-    <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off">
-        <input type="hidden" name="mode" value="write">
-        <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
+            <th:block th:replace="~{front/list/_form::form}"></th:block>
 
-        <th:block th:replace="~{front/list/_form::form}"></th:block>
+            <div class="submit_btns">
+                <button type="submit" th:text="#{등록}"></button>
+            </div>
+        </form>
 
-        <div class="submit_btns">
-            <button type="submit" th:text="#{등록}"></button>
-        </div>
-    </form>
-
-    </main>
+</main>
 </html>
