--- a/src/main/webapp/WEB-INF/templates/front/list/update.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/update.html
@@ -6,16 +6,20 @@
     <h1>관측소 정보 수정</h1>
     <a th:href="@{/list}" th:text="#{목록으로}"></a>
 
-    <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off" th:object="${requestObservatory}">
-        <input type="hidden" name="mode" value="update">
-        <input type="hidden" name="obscd" th:field="*{obscd}">
-        <input type="hidden" name="type" th:field="*{type}">
-        <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
-        <th:block th:replace="~{front/list/_form::form}"></th:block>
-        <div class="submit_btns">
-            <button type="submit" th:text="#{수정}"></button>
-        </div>
-    </form>
+    <hr>
+    <div class="flex align-center">
+        <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off" th:object="${requestObservatory}">
+            <input type="hidden" name="mode" value="update">
+            <input type="hidden" name="obscd" th:field="*{obscd}">
+            <input type="hidden" name="type" th:field="*{type}">
+            <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
+
+            <th:block th:replace="~{front/list/_form::form}"></th:block>
+
+            <div class="submit_btns">
+                <button type="submit" th:text="#{수정}"></button>
+            </div>
+        </form>
 
 
 </main>
