fix: 지도 사이드 토글버튼 오류 수정

--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -35,7 +35,7 @@
 
 			<section class="flex align-center aside-area">
 				<div class="aside dn">
-					<iframe name="frmSide" class="aside_content"></iframe>
+					<iframe name="frmSide" th:src="@{/map/search/wl}" class="aside_content"></iframe>
 				</div>
 				<div>
 					<button type="button" class="angleBtn">
