--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -21,6 +21,23 @@
         </div>
     </form>
 
+    <div class="flex radio">
+        <div>
+            <input type="radio" name="select" value="month">월단위별
+            <input type="radio" name="select" value="year">연단위별
+        </div>
+
+        <div>
+            <button><i class="fa fa-download" aria-hidden="true"></i><th:block th:text="저장"></th:block></button>
+        </div>
+    </div>
+
+    <div>
+
+    <div>
+        <canvas id="myChart"></canvas>
+    </div>
+
     <div class="dashList">
         <div class="divTable minimalistBlack">
             <div class="divTableHeading">
@@ -31,34 +48,32 @@
                     <div th:text="#{강수량}" class="divTableHead">head4</div>
                 </div>
             </div>
-            <div class="divTableBody"  th:if="${items != null && !items.isEmpty()}" th:each="item, status : ${items}" th:object="item">
-                [[${items}]]
-                <div class="divTableRow">
+            <div class="divTableBody"  th:if="${items != null && !items.isEmpty()}" th:each="item, status : ${items}">
+
+                <div class="divTableRow" th:data-obscd="${item.obscd}">
                     <div th:text="${status.count}"  class="divTableCell">cell1_1</div>
 
-                    <div class="divTableCell detail" th:data-obscd="${item.obscd}">
-                        <span th:text="*{obsnm}"></span>
+                    <div class="divTableCell">
+                        <span th:text="${item.obsnm}"></span>
                         <input type="hidden" th:name="${'obsnm' + status.count}" th:value="${item.obsnm}" th:id="*{'obsnm' + status.count}">
                     </div>
+
                     <div class="divTableCell">
-                        <span th:text="*{obscd}"></span>
+                        <span th:text="${item.obscd}"></span>
+                        <input type="hidden" th:name="${'obscd_' + status.count}" th:value="${item.obscd}" th:id="*{'obscd_' + status.count}">
                     </div>
-                    <div class="divTableCell" th:data-obscd-id="*{'obscd_' + status.count}" th:data-obsknd-id="*{'obsknd' + status.count}">
-                        <span th:text="*{obscd}"></span>
+                    <div class="divTableCell">
+<!--                        <span th:text="${precipitation.rf}"></span>-->
                     </div>
                 </div>
-                <th:block th:unless="*{items != null}" th:text="#{데이터_없음}"></th:block>
+                <th:block th:unless="*{items != null && !items.isEmpty()}" th:text="#{데이터_없음}"></th:block>
             </div>
-        </div>
-        <th:block th:replace="~{common/_pagination::pagination}"></th:block>
     </div>
+    <th:block th:replace="~{common/_pagination::pagination}"></th:block>
 
-    <div>
-        <canvas id="myChart"></canvas>
+
+
     </div>
-
-
-
 
 </main>
 </html>
