--- a/src/main/webapp/WEB-INF/templates/front/list/_form.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/_form.html
@@ -3,7 +3,7 @@
 <th:block th:fragment="form" th:object="${requestObservatory}">
     <div>
             <label for="obsnm">관측소명 </label>
-            <input type="text" id="obsnm" name="obsnm" th:field="*{obsnm}" placeholder="관측소 명을 입력하세요">
+            <input type="text" id="obsnm" name="obsnm" th:field="*{obsnm}" placeholder="예)평창군(월정분교)">
             <div class="error" th:each="err : ${#fields.errors('obsnm')}" th:text="${err}"></div>
         </div>
         <div>
@@ -14,23 +14,23 @@
                 <option value="flw">유량</option>
             </select>
             <label class="obscd">표준 코드</label>
-            <input type="text" id="obscd" name="obscd"  th:field="*{obscd}"placeholder="표준코드를 입력하세요">
+            <input type="text" id="obscd" name="obscd"  th:field="*{obscd}" placeholder="xxxxxxxx 예)10014010">
             <div class="error" th:each="err : ${#fields.errors('obscd')}" th:text="${err}"></div>
         </div>
         <div>
             <label class="latitude">위도</label>
-            <input type="text" id="latitude" name="latitude" th:field="*{latitude}" placeholder="위도를 입력하세요">
+            <input type="text" id="latitude" name="latitude" th:field="*{latitude}" placeholder="000-00-00 예)128-33-04">
             <div class="error" th:each="err : ${#fields.errors('latitude')}" th:text="${err}"></div>
             <label class="longitude">경도</label>
-            <input type="text" id="longitude" name="longitude" th:field="*{longitude}" placeholder="경도를 입력하세요">
+            <input type="text" id="longitude" name="longitude" th:field="*{longitude}" placeholder=" 00-00-00 ex)37-37-27 ">
             <div class="error" th:each="err : ${#fields.errors('longitude')}" th:text="${err}"></div>
         </div>
         <div>
             <label class="obsknd">관측 방식</label>
-            <input type="text" id="obsknd" name="obsknd" th:field="*{obsknd}" placeholder="관측 방식을 입력하세요">
+            <input type="text" id="obsknd" name="obsknd" th:field="*{obsknd}" placeholder="예)Auto">
             <div class="error" th:each="err : ${#fields.errors('obsknd')}" th:text="${err}"></div>
             <label class="mngorg">운영 기관</label>
-            <input type="text" id="mngorg" name="mngorg" th:field="*{mngorg}" placeholder="운영기관을 입력하세요">
+            <input type="text" id="mngorg" name="mngorg" th:field="*{mngorg}" placeholder="00도 00(시/군/구) 예)강원특별자치도 평창군">
             <div class="error" th:each="err : ${#fields.errors('mngorg')}" th:text="${err}"></div>
         </div>
 </th:block>
