feat : dashboard 강수랑 하는중

--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -59,7 +59,7 @@
                     </div>
 
                     <div class="divTableCell">
-                        <span th:text="${item.obscd}"></span>
+                        <span th:text="${item.rf}"></span>
                         <input type="hidden" th:name="${'obscd_' + status.count}" th:value="${item.obscd}" th:id="*{'obscd_' + status.count}">
                     </div>
                     <div class="divTableCell">
